--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "app.js",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
+    "express-session": "^1.17.2",
     "mongoose": "^5.12.8"
   },
   "devDependencies": {},
